--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -47,6 +47,8 @@ dependencies:
   - tornado<6.2
   - zict
   - zstandard >=0.9.0
+  - python-lmdb
   - pip:
       - git+https://github.com/dask/dask
       - keras
+      - vineyard
