--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -146,6 +146,7 @@ distributed:
       spill: 0.70      # fraction of process memory where we start spilling to disk
       pause: 0.80      # fraction of process memory at which we pause worker threads
       terminate: 0.95  # fraction of process memory at which we terminate the worker
+      comm: 0.20       # fraction of reserved memory for comms at which we pause comms
 
       # Max size of the spill file on disk (e.g. "10 GB")
       # Set to false for no maximum.
