--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -143,11 +143,12 @@ distributed:
 
       # Fractions of worker process memory at which we take action to avoid memory
       # blowup. Set any of the values to False to turn off the behavior entirely.
+      transfer: 0.10  # fractional size of incoming data transfers where we start 
+                       # throttling incoming data transfers
       target: 0.60     # fraction of managed memory where we start spilling to disk
       spill: 0.70      # fraction of process memory where we start spilling to disk
       pause: 0.80      # fraction of process memory at which we pause worker threads
       terminate: 0.95  # fraction of process memory at which we terminate the worker
-      comm: 0.20       # fraction of reserved memory for comms at which we pause comms
 
       # Max size of the spill file on disk (e.g. "10 GB")
       # Set to false for no maximum.
