--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,22 +26,23 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
         # Cherry-pick test modules to split the overall runtime roughly in half
         partition: [ci1, not ci1]
-        queuing: [queue, no-queue]
         exclude:
           - os: macos-latest
             python-version: 3.9
-          - queuing: queue
-            os: macos-latest
-          - queuing: queue
-            os: windows-latest
-          - queuing: queue
-            python-version: 3.8
-          - queuing: queue
-            python-version: 3.10
         include:
           - partition: "ci1"
             partition-label: "ci1"
           - partition: "not ci1"
+            partition-label: "notci1"
+          - queuing: queue
+            os: ubuntu-latest
+            python-version: 3.9
+            partition: "ci1"
+            partition-label: "ci1"
+          - queuing: queue
+            os: ubuntu-latest
+            python-version: 3.9
+            partition: "not ci1"
             partition-label: "notci1"
 
         # Uncomment to stress-test the test suite for random failures.
@@ -116,6 +117,11 @@ jobs:
 
           python continuous_integration/scripts/host_info.py
 
+      - name: Enable queuing
+        if: ${{ matrix.queuing }}
+        shell: bash -l {0}
+        run: export DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION=1.0
+
       - name: Test
         id: run_tests
         shell: bash -l {0}
@@ -126,10 +132,6 @@ jobs:
               # FIXME ipv6-related failures on Ubuntu github actions CI
               # https://github.com/dask/distributed/issues/4514
               export DISABLE_IPV6=1
-          fi
-
-          if [[ "${{ matrix.queuing }}" = "queue" ]]; then
-              export DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION=1.0
           fi
 
           source continuous_integration/scripts/set_ulimit.sh
