--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -44,7 +44,7 @@ dependencies:
   - tblib
   - toolz
   - torchvision  # Only tested here
-  - tornado<6.2
+  - tornado >= 6.0.3
   - zict
   - zstandard >=0.9.0
   - pip:
