set env var in test job

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -116,11 +116,6 @@ jobs:
 
           python continuous_integration/scripts/host_info.py
 
-      - name: Enable queuing
-        if: ${{ matrix.queuing == 'queue' }}
-        shell: bash -l {0}
-        run: export DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION=1.0
-
       - name: Test
         id: run_tests
         shell: bash -l {0}
@@ -133,7 +128,11 @@ jobs:
               export DISABLE_IPV6=1
           fi
 
-          echo $DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION
+          if [[ "${{ matrix.queuing }}" = "queue" ]]; then
+              export DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION=1.0
+          fi
+
+          echo "saturation: $DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION"
 
           source continuous_integration/scripts/set_ulimit.sh
           set -o pipefail
