--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,7 +26,7 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
         # Cherry-pick test modules to split the overall runtime roughly in half
         partition: [ci1, not ci1]
-        queuing: [no-queue]
+        queuing: [no_queue]
         exclude:
           - os: macos-latest
             python-version: 3.9
@@ -35,14 +35,14 @@ jobs:
             partition-label: "ci1"
           - partition: "not ci1"
             partition-label: "notci1"
-          - queuing: queue
-            os: ubuntu-latest
+          - os: ubuntu-latest
             python-version: 3.9
             partition: "ci1"
-          - queuing: queue
-            os: ubuntu-latest
+            queuing: queue
+          - os: ubuntu-latest
             python-version: 3.9
             partition: "not ci1"
+            queuing: queue
 
         # Uncomment to stress-test the test suite for random failures.
         # Must also change env.TEST_ID below.
