`partition-label` still needed for some reason?

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -38,10 +38,12 @@ jobs:
           - os: ubuntu-latest
             python-version: 3.9
             partition: "ci1"
+            partition-label: "ci1"
             queuing: queue
           - os: ubuntu-latest
             python-version: 3.9
             partition: "not ci1"
+            partition-label: "notci1"
             queuing: queue
 
         # Uncomment to stress-test the test suite for random failures.
