--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -160,15 +160,15 @@ jobs:
 
           if [[ "${{ matrix.queuing }}" = "queue" ]]; then
               export DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION=1.0
+              echo "worker-saturation: $DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION"
           fi
 
-          echo "saturation: $DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION"
 
           source continuous_integration/scripts/set_ulimit.sh
           set -o pipefail
           mkdir reports
 
-          pytest distributed/tests/test_batched.py \
+          pytest distributed \
             -m "not avoid_ci and ${{ matrix.partition }}" --runslow \
             --leaks=fds,processes,threads \
             --junitxml reports/pytest.xml -o junit_suite_name=$TEST_ID \
