--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,13 +12,13 @@ repos:
       - id: isort
         language_version: python3
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.37.3
+    rev: v2.38.2
     hooks:
       - id: pyupgrade
         args:
           - --py38-plus
   - repo: https://github.com/psf/black
-    rev: 22.6.0
+    rev: 22.8.0
     hooks:
       - id: black
         language_version: python3
@@ -33,7 +33,7 @@ repos:
         additional_dependencies:
         # NOTE: autoupdate does not pick up flake8-bugbear since it is a transitive
         #  dependency. Make sure to update flake8-bugbear manually on a regular basis.
-          - flake8-bugbear==22.7.1
+          - flake8-bugbear==22.9.23
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.971
     hooks:
@@ -43,7 +43,7 @@ repos:
         args: [--warn-unused-configs]
         additional_dependencies:
           # Type stubs
-          - pandas-stubs >=1.4.3.220704
+          - pandas-stubs
           - types-docutils
           - types-requests
           - types-paramiko
@@ -55,6 +55,8 @@ repos:
           - dask
           - numpy
           - pytest
-          - tornado >=6.2
+          - tornado
           - zict
           - pyarrow
+
+# Increase this by 1 to force-wipe the pre-commit github action cache: 1
