--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -66,9 +66,10 @@ distributed:
       # Set to true to auto-start the Active Memory Manager on Scheduler start; if false
       # you'll have to either manually start it with client.amm.start() or run it once
       # with client.amm.run_once().
-      start: false
+      start: true
       # Once started, run the AMM cycle every <interval>
-      interval: 2s
+      # TODO REVERT BEFORE MERGING
+      interval: 0.01s
       policies:
         # Policies that should be executed at every cycle. Any additional keys in each
         # object are passed as keyword arguments to the policy constructor.
