--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -67,11 +67,17 @@ distributed:
       # you'll have to either manually start it with client.amm.start() or run it once
       # with client.amm.run_once().
       start: false
+
       # Once started, run the AMM cycle every <interval>
       interval: 2s
+
+      # Memory measure to use. Must be one of the attributes of
+      # distributed.scheduler.MemoryState.
+      measure: optimistic
+
+      # Policies that should be executed at every cycle. Any additional keys in each
+      # object are passed as keyword arguments to the policy constructor.
       policies:
-        # Policies that should be executed at every cycle. Any additional keys in each
-        # object are passed as keyword arguments to the policy constructor.
         - class: distributed.active_memory_manager.ReduceReplicas
 
   worker:
