--- a/setup.cfg
+++ b/setup.cfg
@@ -135,6 +135,8 @@ allow_incomplete_defs = true
 # Recent or recently overhauled modules featuring stricter validation
 [mypy-distributed.active_memory_manager]
 allow_untyped_defs = false
+[mypy-distributed.system_monitor]
+allow_untyped_defs = false
 [mypy-distributed.worker_memory]
 allow_untyped_defs = false
 [mypy-distributed.worker_state_machine]
