--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -306,7 +306,7 @@ distributed:
     system-monitor:
       interval: 500ms
       disk: true  # Monitor host-wide disk I/O
-      host-cpu: false  # Monitor host-wide CPU usage, with very grandular breakdown
+      host-cpu: false  # Monitor host-wide CPU usage, with very granular breakdown
     event-loop: tornado
   rmm:
     pool-size: null
