--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 click >= 6.6
 cloudpickle >= 1.5.0
-dask @ git+https://github.com/douglasdavis/dask@new-cli
+dask == 2022.9.2
 jinja2
 locket >= 1.0.0
 msgpack >= 0.6.0
