--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -229,7 +229,9 @@ distributed:
       infiniband: null  # enable Infiniband
       rdmacm: null  # enable RDMACM
       create-cuda-context: null  # create CUDA context before UCX initialization
-
+      environment: {}            # Any other environment settings to
+                                 # be transferred to UCX. Name
+                                 # munging: key-name => UCX_KEY_NAME
     zstd:
       level: 3      # Compression level, between 1 and 22.
       threads: 0    # Threads to use. 0 for single-threaded, -1 to infer from cpu count.
