--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -191,6 +191,7 @@ distributed:
       # Numpy configuration
       OMP_NUM_THREADS: 1
       MKL_NUM_THREADS: 1
+      OPENBLAS_NUM_THREADS: 1
 
   client:
     heartbeat: 5s  # Interval between client heartbeats
