typing for p2p shuffle

--- a/setup.cfg
+++ b/setup.cfg
@@ -141,3 +141,7 @@ allow_untyped_defs = false
 allow_untyped_defs = false
 [mypy-distributed.worker_state_machine]
 allow_untyped_defs = false
+[mypy-distributed.shuffle.*]
+allow_untyped_defs = false
+[mypy-distributed.shuffle.tests.*]
+allow_untyped_defs = true
