--- a/continuous_integration/recipes/distributed/meta.yaml
+++ b/continuous_integration/recipes/distributed/meta.yaml
@@ -18,6 +18,7 @@ build:
   noarch: python
   script: python -m pip install . -vv --no-deps
   entry_points:
+    # Old style CLI
     - dask-scheduler = distributed.cli.dask_scheduler:main
     - dask-ssh = distributed.cli.dask_ssh:main
     - dask-worker = distributed.cli.dask_worker:main
@@ -26,7 +27,6 @@ requirements:
   host:
     - python >=3.8
     - pip
-    - setuptools
   run:
     - python >=3.8
     - click >=6.6
@@ -34,7 +34,7 @@ requirements:
     - cytoolz >=0.8.2
     - dask-core >={{ dask_version }},<{{ next_release_version }}
     - jinja2
-    - locket >=1.0
+    - locket >=1.0.0
     - msgpack-python >=0.6.0
     - packaging >=20.0
     - psutil >=5.0
@@ -61,6 +61,9 @@ test:
     - dask-scheduler --help
     - dask-ssh --help
     - dask-worker --help
+    - dask scheduler --help
+    - dask ssh --help
+    - dask worker --help
   requires:
     - pip
 
