Add CLI tests to `dask` recipe, update dependencies

--- a/continuous_integration/recipes/dask/meta.yaml
+++ b/continuous_integration/recipes/dask/meta.yaml
@@ -20,15 +20,15 @@ build:
 requirements:
   host:
     - python >=3.8
-    - setuptools
   run:
     - python >=3.8
     - dask-core >={{ dask_version }},<{{ next_release_version }}
     - distributed {{ version }}=*_{{ GIT_DESCRIBE_HASH }}_{{ GIT_DESCRIBE_NUMBER }}
     - cytoolz >=0.8.2
+    - lz4
     - numpy >=1.18
     - pandas >=1.0
-    - bokeh >=2.1.1
+    - bokeh >=2.4.2
     - jinja2
 
   run_constrained:
@@ -46,6 +46,10 @@ test:
     - dask.diagnostics
     - dask.distributed
     - distributed
+    
+  commands:
+    - dask --version
+    - dask info versions
 
 about:
   home: https://dask.org/
