--- a/continuous_integration/recipes/distributed/meta.yaml
+++ b/continuous_integration/recipes/distributed/meta.yaml
@@ -1,7 +1,6 @@
 {% set major_minor_patch = environ.get('GIT_DESCRIBE_TAG', '0.0.0.dev').split('.') %}
 {% set new_patch = major_minor_patch[2] | int + 1 %}
-{% set next_release_version = (major_minor_patch[:2] + [new_patch]) | join('.') %}
-{% set version = next_release_version + environ.get('VERSION_SUFFIX', '') %}
+{% set version = (major_minor_patch[:2] + [new_patch]) | join('.') + environ.get('VERSION_SUFFIX', '') %}
 {% set dask_version = environ.get('DASK_CORE_VERSION', '0.0.0.dev') %}
 
 
@@ -27,12 +26,13 @@ requirements:
   host:
     - python >=3.8
     - pip
+    - dask-core {{ dask_version }}
   run:
     - python >=3.8
     - click >=6.6
     - cloudpickle >=1.5.0
     - cytoolz >=0.8.2
-    - dask-core >={{ dask_version }},<{{ next_release_version }}
+    - {{ pin_compatible('dask-core', max_pin='x.x.x.x') }}
     - jinja2
     - locket >=1.0.0
     - msgpack-python >=0.6.0
