--- a/continuous_integration/recipes/distributed/meta.yaml
+++ b/continuous_integration/recipes/distributed/meta.yaml
@@ -1,7 +1,6 @@
 {% set major_minor_patch = environ.get('GIT_DESCRIBE_TAG', '0.0.0.dev').split('.') %}
 {% set new_patch = major_minor_patch[2] | int + 1 %}
-{% set next_release_version = (major_minor_patch[:2] + [new_patch]) | join('.') %}
-{% set version = next_release_version + environ.get('VERSION_SUFFIX', '') %}
+{% set version = (major_minor_patch[:2] + [new_patch]) | join('.') + environ.get('VERSION_SUFFIX', '') %}
 {% set dask_version = environ.get('DASK_CORE_VERSION', '0.0.0.dev') %}
 
 
@@ -16,8 +15,9 @@ build:
   number: {{ GIT_DESCRIBE_NUMBER }}
   string: py_{{ GIT_DESCRIBE_HASH }}_{{ GIT_DESCRIBE_NUMBER }}
   noarch: python
-  script: python -m pip install . -vv --no-deps
+  script: {{ PYTHON }} -m pip install . -vv --no-deps
   entry_points:
+    # Old style CLI
     - dask-scheduler = distributed.cli.dask_scheduler:main
     - dask-ssh = distributed.cli.dask_ssh:main
     - dask-worker = distributed.cli.dask_worker:main
@@ -26,15 +26,15 @@ requirements:
   host:
     - python >=3.8
     - pip
-    - setuptools
+    - dask-core {{ dask_version }}
   run:
     - python >=3.8
     - click >=6.6
     - cloudpickle >=1.5.0
     - cytoolz >=0.8.2
-    - dask-core >={{ dask_version }},<{{ next_release_version }}
+    - {{ pin_compatible('dask-core', max_pin='x.x.x.x') }}
     - jinja2
-    - locket >=1.0
+    - locket >=1.0.0
     - msgpack-python >=0.6.0
     - packaging >=20.0
     - psutil >=5.0
@@ -61,6 +61,9 @@ test:
     - dask-scheduler --help
     - dask-ssh --help
     - dask-worker --help
+    - dask scheduler --help
+    - dask ssh --help
+    - dask worker --help
   requires:
     - pip
 
