polars protocol support and pre-spawn env config

--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -192,6 +192,8 @@ distributed:
       OMP_NUM_THREADS: 1
       MKL_NUM_THREADS: 1
       OPENBLAS_NUM_THREADS: 1
+      # Polars configuration
+      POLARS_MAX_THREADS: 1
 
   client:
     heartbeat: 5s  # Interval between client heartbeats
