--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -45,7 +45,7 @@ dependencies:
   - tblib
   - toolz
   - torchvision  # Only tested here
-  - tornado
+  - tornado >=6.2
   - zict
   - zstandard >=0.9.0
   - pip:
