fix: run tests action

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,7 +15,7 @@ concurrency:
 jobs:
   test:
     # Do not run the schedule job on forks
-    if: github.repository == 'dask/distributed' || github.event_name != 'schedule'
+    # if: github.repository == 'dask/distributed' || github.event_name != 'schedule'
     runs-on: ${{ matrix.os }}
     timeout-minutes: 120
 
