--- a/continuous_integration/environment-3.10.yaml
+++ b/continuous_integration/environment-3.10.yaml
@@ -32,6 +32,7 @@ dependencies:
   - pytest-repeat
   - pytest-rerunfailures
   - pytest-timeout
+  - pytest-asyncio
   - requests
   - s3fs  # overridden by git tip below
   - scikit-learn
