--- a/continuous_integration/environment-3.8.yaml
+++ b/continuous_integration/environment-3.8.yaml
@@ -34,6 +34,7 @@ dependencies:
   - pytest-repeat
   - pytest-rerunfailures
   - pytest-timeout
+  - pytest-asyncio
   - requests
   - setuptools<65  # FIXME https://github.com/jcrist/crick/issues/24
   - s3fs
