--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -35,6 +35,7 @@ dependencies:
   - pytest-repeat
   - pytest-rerunfailures
   - pytest-timeout
+  - pytest-asyncio
   - python-snappy >=0.5.3  # Only tested here
   - pytorch  # Only tested here
   - requests
