Initial changes to get pytest suite running

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,7 @@ filterwarnings =
     ignore:overflow encountered in long_scalars:RuntimeWarning
     ignore:Creating scratch directories is taking a surprisingly long time.*:UserWarning
     ignore:Scheduler already contains a plugin with name nonidempotentplugin. overwriting:UserWarning
-    ignore:Increasing number of chunks by factor of 20:dask.array.core.PerformanceWarning
+    ignore:Increasing number of chunks by factor of 20::dask.array.core.PerformanceWarning
     ignore::distributed.versions.VersionMismatchWarning
     ignore:(?s)Exception in thread.*old_ssh.*channel\.send\(b"\\x03"\).*Socket is closed:pytest.PytestUnhandledThreadExceptionWarning
     ignore:(?s)Exception in thread.*paramiko\.ssh_exception\.NoValidConnectionsError:pytest.PytestUnhandledThreadExceptionWarning
