--- a/setup.cfg
+++ b/setup.cfg
@@ -98,6 +98,7 @@ markers =
     gpu: marks tests we want to run on GPUs
     leaking: ignore leaked resources; see pytest_resourceleaks.py for usage
     workerstate: deterministic test for the worker state machine. Automatically applied to all tests that use the 'ws' fixture.
+    asyncio: mark tests for testing asyncio code
 
 # pytest-timeout settings
 # 'thread' kills off the whole test suite. 'signal' only kills the offending test.
