--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -153,7 +153,7 @@ jobs:
 
       - name: Print host info
         # host_info.py imports numpy, which isn't a direct dependency of distributed
-        if: matrix.environment == 'mindeps'
+        if: matrix.environment != 'mindeps'
         shell: bash -l {0}
         run: |
           python continuous_integration/scripts/host_info.py
