Add codespell pre-commit hook

--- a/setup.cfg
+++ b/setup.cfg
@@ -145,3 +145,7 @@ allow_untyped_defs = false
 allow_untyped_defs = false
 [mypy-distributed.shuffle.tests.*]
 allow_untyped_defs = true
+
+[codespell]
+ignore-words-list = statics
+skip = docs/source/changelog.rst
