--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,6 +34,12 @@ repos:
         # NOTE: autoupdate does not pick up flake8-bugbear since it is a transitive
         #  dependency. Make sure to update flake8-bugbear manually on a regular basis.
           - flake8-bugbear==22.9.23
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.1.0
+    hooks:
+      -   id: codespell
+          types_or: [rst, markdown]
+          files: docs
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.982
     hooks:
