Update env file

--- a/continuous_integration/environment-3.8.yaml
+++ b/continuous_integration/environment-3.8.yaml
@@ -7,7 +7,7 @@ dependencies:
   - packaging
   - pip
   - asyncssh
-  - bokeh
+  - bokeh < 3 # Only tested here
   - click
   - cloudpickle
   - coverage
