--- a/continuous_integration/environment-3.10.yaml
+++ b/continuous_integration/environment-3.10.yaml
@@ -7,8 +7,7 @@ dependencies:
   - packaging
   - pip
   - asyncssh
-  # Temporarily installing from PyPI until `bokeh=3.0.2` is on conda-forge
-  # - bokeh
+  - bokeh
   - click
   - cloudpickle
   - coverage
@@ -43,8 +42,6 @@ dependencies:
   - zict  # overridden by git tip below
   - zstandard >=0.9.0
   - pip:
-      # Install `bokeh` with conda once 3.0.2 is on conda-forge
-      - bokeh >= 3.0.2
       - git+https://github.com/dask/dask
       - git+https://github.com/dask/s3fs
       - git+https://github.com/dask/zict
