Switch back setup.cfg timeout_method

--- a/setup.cfg
+++ b/setup.cfg
@@ -103,7 +103,7 @@ markers =
 # 'thread' kills off the whole test suite. 'signal' only kills the offending test.
 # However, 'signal' doesn't work on Windows (due to lack of SIGALRM).
 # The CI script modifies this config file on the fly on Linux and MacOS.
-timeout_method = signal
+timeout_method = thread
 # This should not be reduced; Windows CI has been observed to be occasionally
 # exceptionally slow.
 timeout = 300
