--- a/setup.cfg
+++ b/setup.cfg
@@ -125,6 +125,7 @@ warn_unused_ignores = true
 warn_unreachable = true
 
 # FIXME must clean these modules up
+# Also look for 'mypy: disable-error-code' at the top of modules
 [mypy-distributed.client]
 allow_incomplete_defs = true
 [mypy-distributed.scheduler]
