exclude macos py 3.10

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,6 +30,8 @@ jobs:
         exclude:
           - os: macos-latest
             python-version: 3.9
+          - os: macos-latest
+            python-version: 3.10
         include:
           - os: ubuntu-latest
             python-version: 3.9
