Correct workflow syntax

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -165,7 +165,7 @@ jobs:
         shell: bash -l {0}
         env:
           PYTHONFAULTHANDLER: 1
-          MINDEPS: ${{ matrix.environment == "mindeps" }}
+          MINDEPS: ${{ matrix.environment == 'mindeps' }}
         run: |
           source continuous_integration/scripts/set_ulimit.sh
           set -o pipefail
