--- a/continuous_integration/environment-3.11.yaml
+++ b/continuous_integration/environment-3.11.yaml
@@ -43,8 +43,10 @@ dependencies:
   - zict  # overridden by git tip below
   - zstandard >=0.9.0
   - pip:
-      - git+https://github.com/dask/dask
+      # DO NOT MERGE
+      - git+https://github.com/crusaderky/dask@numpy_sizeof
       - git+https://github.com/dask/s3fs
-      - git+https://github.com/dask/zict
+      # DO NOT MERGE
+      - git+https://github.com/crusaderky/zict@shared_memory
       - git+https://github.com/fsspec/filesystem_spec
       - keras
