added no:legacypath in the config file which would protect from using older fixtures.

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,7 @@ addopts =
     --strict-markers
     --strict-config
     -p no:asyncio
+    -p no:legacypath
 filterwarnings =
     error
     ignore:Please use `dok_matrix` from the `scipy\.sparse` namespace, the `scipy\.sparse\.dok` namespace is deprecated.:DeprecationWarning
